--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
             <p>Los blogs son la mejor forma de compartir tu informacion y tus ideas. Mucho mas que ir a conferencias y salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale Like</p>
         </div>
+        <div id="footer">
+            Hecho con amor y visca el Barca
+        </div>
     </div>
     
 </body>
