--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         </div>
         <div id="post">
             <h1>Este es el titulo chimba e interesante del post</h1>
-            <p>Y este parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Y este párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir tu informacion y tus ideas. Mucho mas que ir a conferencias y salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale Like</p>
         </div>
