--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
         <div id="post">
             <h1>Este es el titulo chimba e interesante del post</h1>
             <p>Y este párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+            <p><img src="imagenes/barca.jpg" width="100%"></p>
             <p>Los blogs son la mejor forma de compartir tu informacion y tus ideas. Mucho mas que ir a conferencias y salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale Like</p>
         </div>
